--- a/app/views/fisherman_friend/help.html.erb
+++ b/app/views/fisherman_friend/help.html.erb
@@ -1,2 +1,4 @@
-<h1>FishermanFriend#help</h1>
-<p>Find me in app/views/fisherman_friend/help.html.erb</p>
+<h1>Help</h1>
+<p>Suicidal people are just angels trying to go home</p>
+<p>14 y/o grils:</p>
+<img src="https://i.kym-cdn.com/entries/icons/original/000/026/489/crying.jpg" alt="RIP">
