pridane editovanie a prezeranie userov

--- a/app/views/fisherman_friend/help.html.erb
+++ b/app/views/fisherman_friend/help.html.erb
@@ -1,4 +1,4 @@
 <h1>Help</h1>
-<p>Suicidal people are just angels trying to go home</p>
-<p>14 y/o grils:</p>
-<img src="https://i.kym-cdn.com/entries/icons/original/000/026/489/crying.jpg" alt="RIP">
+<p>Literally no one:</p>
+<p>Chimney:</p>
+<img src="http://www.richmondchimneysweeps.com/i/david-newton-brick-chimney.jpg" alt="RIP">
