--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("https://scontent.fbts2-1.fna.fbcdn.net/v/t1.15752-0/s261x260/53927416_389392521843303_9212401109832826880_n.jpg?_nc_cat=111&_nc_ht=scontent.fbts2-1.fna&oh=a001a2f635345972b096684f93df9d55&oe=5D4E355D", alt: "Ricardo milos") %>
-<p>Šimko approves!</p>
+<%= video_tag "gifik.mp4", :size => "320x240", :controls => true %>
+
