--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,11 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %> <%= @user.surname %>
-        <%= @user.age %> <%= @user.email %>
-      </h1>
+      <p> <%= gravatar_for @user %> </p>
+       <%= "Name:" %> <%= @user.name %>
+      <%= "Surname:" %> <%= @user.surname %>
+       <%= "Age:" %> <%= @user.age %>
+       <%= "Email:" %> <%= @user.email %>
     </section>
   </aside>
 </div>
