--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,5 +4,20 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
+
+
+      <h1>Delete your account!</h1>
+
+      <h2>
+        Remember. When you delete your account, you also destroy all your data.
+      </h2>
+    <center>
+      <%= link_to "Delete my account", @user, method: :delete,class: "btn btn-primary",
+                  data: { confirm: "Are you sure? This action cannot be reversed" } %>
+    </center>
+
   </div>
 </div>
+
+
+
