--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,16 +2,15 @@
 <h1>All users</h1>
 
 
+<%= will_paginate %>
 
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-
+      <%= link_to  'show', user, class: "btn btn-primary" %>
       <%= user.name %>
       <%= user.surname %>
       <%= user.email %>
-      <%= link_to  'show', user %>
-
 
     </li>
 
@@ -20,5 +19,4 @@
 
 </ul>
 
-
-
+<%= will_paginate %>
