--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -4,10 +4,15 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
-      <section class="micropost_form">
+      <section class="catch _form">
         <%= render 'shared/catch_form' %>
       </section>
     </aside>
+    <div class="col-md-8">
+      <h3>Catches:</h3>
+      <%= render 'shared/feed' %>
+    </div>
+
   </div>
 <% else %>
 <div class="center jumbotron">
