--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,10 +7,9 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= link_to  'show', user, class: "btn btn-primary" %>
-      <%= user.name %>
-      <%= user.surname %>
-      <%= user.email %>
+      <%= link_to  'Show', user, class: "btn btn-primary" %>
+      Name:<%= user.name %> <%=user.surname %>
+      E-mail:<%= user.email %>
 
     </li>
 
