--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,14 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
+Search for user:
+
+
+<%= form_tag users_path, :method => 'get' do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag 'Search'%>
+<% end %>
+
 
 <%= will_paginate %>
 
