--- a/app/views/catches/_catch.html.erb
+++ b/app/views/catches/_catch.html.erb
@@ -1,10 +1,9 @@
 <li id="catch-<%= catch.id %>">
-  <span class="user"><%= link_to catch.user.name, catch.user %> caught <%=  catch.fish.name %>.</span>
-  <span class="size">Size: <%=  catch.size %> cm,</span>
-  <span class="size">Weight: <%=  catch.weight %> kg</span>
+  <span class="user"><%= link_to catch.user.name, catch.user %> caught fish.</span>
   <span class="timestamp">
-    <%= time_ago_in_words(catch.created_at) %> ago.
+    Date: <%=  (catch.created_at) %> .
     <% if current_user?(catch.user) %>
+      <%= link_to  "Show details", catch %>
       <%= link_to "delete",catch, method: :delete,
                   data: { confirm: "You sure?" } %>
     <% end %>
