--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@ Search for user:
 
 <%= form_tag users_path, :method => 'get' do %>
   <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag 'Search'%>
+  <%= submit_tag 'Search', class: "btn btn-primary"%>
 <% end %>
 
 
