--- a/app/views/catches/_catch.html.erb
+++ b/app/views/catches/_catch.html.erb
@@ -7,5 +7,6 @@
       <%= link_to "delete",catch, method: :delete,
                   data: { confirm: "You sure?" } %>
     <% end %>
+    <%= link_to  "Show details", catch %>
   </span>
 </li>
