--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -1,8 +1,26 @@
 <html>
 <head>
   <style>
-    table, th, td {
-      border: 1px solid black;
+
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th {
+      background-color: #337ab7 ;
+      color: white
+    }
+
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    tr:nth-child(even) {
+      background-color: Aliceblue;
     }
   </style>
 </head>
@@ -30,69 +48,33 @@
   <h1>Welcome to the Fisherman's friend</h1>
 
   <h2>
-    This app will help you to find best place for your fishing trip.
+    We have  <%= @countu[0]['count'] %> users and  <%= @countc[0]['count'] %> catches.
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
-  Best places for carp fishing:
 
-  <body>
-  <table style="width:50%">
-    <tr>
-      <th>Area</th>
-      <th>Count</th>
-
-
-      <% @carp_places.each do |place| %>
-      <tr>
-        <td> <%=place['name'] %> </td>
-        <td> <%=place['count'] %></td>
-      </tr>
-    <% end %>
-    </tr>
-  </table>
-  </body>
-
-
-  Fish caught on Lake Javier:
-
-  <body>
-  <table style="width:50%">
-    <tr>
-      <th>Fish</th>
-      <th>Count</th>
-
-
-      <% @Lake_Javier_fish.each do |fish| %>
-      <tr>
-        <td> <%=fish['name'] %> </td>
-        <td> <%=fish['count'] %></td>
-      </tr>
-    <% end %>
-    </tr>
-  </table>
-  </body>
-
-  Best bait for pike fishing:
-
-  <body>
-  <table style="width:50%">
-    <tr>
-      <th>Bait</th>
-      <th>Count</th>
-
-
-      <% @Pike_baits.each do |bait| %>
-      <tr>
-        <td> <%=bait['name'] %> </td>
-        <td> <%=bait['count'] %></td>
-      </tr>
-    <% end %>
-    </tr>
-  </table>
-  </body>
 <%end %>
 
-</html>
+
+Places with best fish population:
+
+<body>
+<table style="width:50%">
+  <tr>
+    <th>Area name</th>
+    <th>Catches on 100 acrew</th>
+
+
+    <% @population_on_acre.each do |place| %>
+    <tr>
+      <td> <%=place['name'] %> </td>
+      <td> <%=place['count'] %></td>
+    </tr>
+  <% end %>
+  </tr>
+</table>
+</body>
+
+
