--- a/app/views/fisherman_friend/search.html.erb
+++ b/app/views/fisherman_friend/search.html.erb
@@ -1,1 +1,17 @@
-im here nigga
+<div class="button-group">
+  <label class="form-control" data-toggle="dropdown">Language <span class="fa fa-angle-down"></span> </label>
+  <ul class="dropdown-menu2 dropdown-menu">
+    <li>
+      <a href="#" class="small" data-value="" tabIndex="-1"><input type="checkbox" /> No Other Language</a>
+    </li>
+    <li>
+      <a href="#" class="small" data-value="arabic" tabIndex="-1"><input type="checkbox" /> Arabic</a>
+    </li>
+    <li>
+      <a href="#" class="small" data-value="french" tabIndex="-1"><input type="checkbox" /> French</a>
+    </li>
+    <li>
+      <a href="#" class="small" data-value="spanish" tabIndex="-1"><input type="checkbox" /> Spanish</a>
+    </li>
+  </ul>
+</div>
