--- a/app/views/catches/show.html.erb
+++ b/app/views/catches/show.html.erb
@@ -2,14 +2,14 @@
 
 <div class="row">
     <section class="catcch_info">
-      <div> <span>  <%= "Fisherman:" %> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
-      <div><span>  <%= "Fish:" %> <%= @catch.fish.name%>  </span></div>
-      <div><span>  <%= "Weight:" %> <%= @catch.weight%>  </span></div>
-      <div><span>  <%= "Length:" %> <%= @catch.size%>  </span></div>
-      <div><span>  <%= "Area:" %> <%= @catch.area.name%>  </span></div>
-      <div><span>  <%= "Bait:" %> <%= @catch.bait.name%>  </span></div>
-      <div><span>  <%= "Method:" %> <%= @catch.methodf.name%>  </span></div>
-      <div><span>  <%= "Date:" %> <%= @catch.created_at%>  </span></div>
+      <div> <span>  <b><%= "Fisherman:" %></b> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
+      <div><span>  <b><%= "Fish:" %></b> <%= @catch.fish.name%>  </span></div>
+      <div><span>  <b><%= "Weight:" %></b> <%= @catch.weight%>  </span></div>
+      <div><span>  <b><%= "Length:" %></b> <%= @catch.size%>  </span></div>
+      <div><span>  <b><%= "Area:" %></b> <%= @catch.area.name%>  </span></div>
+      <div><span>  <b><%= "Bait:" %></b> <%= @catch.bait.name%>  </span></div>
+      <div><span>  <b><%= "Method:" %></b> <%= @catch.methodf.name%>  </span></div>
+      <div><span>  <b><%= "Date:" %></b> <%= @catch.created_at%>  </span></div>
     </section>
   </aside>
 </div>
