--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -52,29 +52,32 @@
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+
+
 </div>
+
+  Places with best fish population:
+
+  <body>
+  <table style="width:50%">
+    <tr>
+      <th>Area name</th>
+      <th>Catches on 100 acres</th>
+
+
+      <% @population_on_acre.each do |place| %>
+      <tr>
+        <td> <%=place['name'] %> </td>
+        <td> <%=place['count'] %></td>
+      </tr>
+    <% end %>
+    </tr>
+  </table>
+  </body>
 
 
 <%end %>
 
 
-Places with best fish population:
-
-<body>
-<table style="width:50%">
-  <tr>
-    <th>Area name</th>
-    <th>Catches on 100 acrew</th>
-
-
-    <% @population_on_acre.each do |place| %>
-    <tr>
-      <td> <%=place['name'] %> </td>
-      <td> <%=place['count'] %></td>
-    </tr>
-  <% end %>
-  </tr>
-</table>
-</body>
 
 
