--- a/app/views/fishes/show.html.erb
+++ b/app/views/fishes/show.html.erb
@@ -25,42 +25,55 @@
   </style>
 </head>
 
-<div class="col-md-8">
-  <body>
-  <table style="width:50%">
-    <tr>
-      <th>Area name</th>
-      <th> <%= @fish.name %> caught</th>
-      <% @area.each do |record| %>
-      <tr>
-        <td> <%=record['name'] %> </td>
-        <td> <%=record['count'] %></td>
+<aside class="col-md-4">
+  <div class="col-md-8">
+    <body>
+    <b> Best area for catching <%= @fish.name %>:</b>
+
+    <table style="width:50%">
+     <tr>
+        <th>Area name</th>
+        <th> <%= @fish.name %> caught</th>
+          <% @area.each do |record| %>
+          <tr>
+          <td> <%=record['name'] %> </td>
+          <td> <%=record['count'] %></td>
+          </tr>
+      <% end %>
       </tr>
-    <% end %>
-    </tr>
-  </table>
-  </body>
-</div>
+    </table>
+
+    </body>
+  </div>
+
+</aside>
+
+
+  <div class="col-md-8">
+    <body>
+    <b> Best bait for catching <%= @fish.name %>:</b>
+
+    <table style="width:50%">
+      <tr>
+        <th>Bait name</th>
+        <th> <%= @fish.name %> caught</th>
+        <% @bait.each do |record| %>
+        <tr>
+          <td> <%=record['name'] %> </td>
+          <td> <%=record['count'] %></td>
+        </tr>
+      <% end %>
+      </tr>
+    </table>
+    </body>
+  </div>
+
+
+
 
 <div class="col-md-8">
   <body>
-  <table style="width:50%">
-    <tr>
-      <th>Bait name</th>
-      <th> <%= @fish.name %> caught</th>
-      <% @bait.each do |record| %>
-      <tr>
-        <td> <%=record['name'] %> </td>
-        <td> <%=record['count'] %></td>
-      </tr>
-    <% end %>
-    </tr>
-  </table>
-  </body>
-</div>
-
-<div class="col-md-8">
-  <body>
+  <b> Best fishing method for catching <%= @fish.name %>:</b>
   <table style="width:50%">
     <tr>
       <th>Method name</th>
