pridany carousel, upravene zobrazovanie ryb

--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,4 +1,8 @@
-<%= will_paginate %>
+
+<div class="container" align="center">
+  <h1>Revíry</h1>
+</div>
+
 <ul class="users">
   <% @areas.each do |area| %>
     <li>
