--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -1,12 +1,6 @@
 <footer class="footer">
-  <small>
-   Trust in the Allfather
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-
-    </ul>
-  </nav>
+  <div align="center">
+    <p class="text-muted"> Táto stránka bola vytvorená ako školský projekt. Dáta o revíroch boli získané zo stránky kamnaryby.sk a dáta o úlovkoch nagenerované za účelom prezentácie.</p>
+    <p class='text-muted'>Kontakt: jurajmecir@gmail.com</p>
+  </div>
 </footer>
