--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,57 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+.navbar {
+  height: 80px;
+  /*background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);*/
+}
+
+.container {
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.carousel{
+  background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  height: 150px;
+  margin-bottom: 15px;
+}
+/* duhovy header*/
+/*shading a podobne srandy*/
+table {
+  box-shadow: 10px 10px 5px grey;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 30px;
+  margin-top: 10px;
+
+}
+
+
+th {
+  background-color: #337ab7 ;
+  color: white
+}
+
+td, th {
+
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: Aliceblue;
+}
+
+div{
+  margin-bottom: 5px;
+
+}
+
+
+
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
@@ -12,24 +63,11 @@ $gray-medium-light: #eaeaea;
 }
 .btn.btn-primary {
   color: #ffffff;
+  margin-bottom: 10px;
 }
 /* universal */
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
 
 body {
   padding-top: 60px;
@@ -64,12 +102,26 @@ h1 {
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.5em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
   color: $gray-light;
+}
+
+h3 {
+  font-size: 1em;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+
+}
+
+
+h5 {
+
+  color: white;
 }
 
 p {
