--- a/app/views/catches/show.html.erb
+++ b/app/views/catches/show.html.erb
@@ -2,14 +2,14 @@
 
 <div class="row">
     <section class="catcch_info">
-      <div> <span>  <b><%= "Fisherman:" %></b> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
-      <div><span>  <b><%= "Fish:" %></b> <%= @catch.fish.name%>  </span></div>
-      <div><span>  <b><%= "Weight:" %></b> <%= @catch.weight%>  </span></div>
-      <div><span>  <b><%= "Length:" %></b> <%= @catch.size%>  </span></div>
-      <div><span>  <b><%= "Area:" %></b> <%= @catch.area.name%>  </span></div>
-      <div><span>  <b><%= "Bait:" %></b> <%= @catch.bait.name%>  </span></div>
-      <div><span>  <b><%= "Method:" %></b> <%= @catch.methodf.name%>  </span></div>
-      <div><span>  <b><%= "Date:" %></b> <%= @catch.created_at%>  </span></div>
+      <div> <span>  <b><%= "Rybár:" %></b> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
+      <div><span>  <b><%= "Druh ryby:" %></b> <%= @catch.fish.name%>  </span></div>
+      <div><span>  <b><%= "Váha:" %></b> <%= @catch.weight%>  </span></div>
+      <div><span>  <b><%= "Dĺžka:" %></b> <%= @catch.size%>  </span></div>
+      <div><span>  <b><%= "Revír:" %></b> <%= @catch.area.name%>  </span></div>
+      <div><span>  <b><%= "Návnada:" %></b> <%= @catch.bait.name%>  </span></div>
+      <div><span>  <b><%= "Spôsob lovu:" %></b> <%= @catch.methodf.name%>  </span></div>
+      <div><span>  <b><%= "Dátum:" %></b> <%= @catch.created_at%>  </span></div>
     </section>
   </aside>
 </div>
