--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,4 @@
 <%= link_to gravatar_for(current_user, size: 50), current_user %>
 <h1><%= current_user.name %></h1>
-<span><%= link_to "View my profile", current_user %></span>
-<span><%= pluralize(current_user.catches.count, "catch") %></span>
+<span><%= link_to "Pozri si môj profil", current_user %></span>
+<span><%= pluralize(current_user.catches.count, "úlovok") %></span>
