--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -24,10 +24,10 @@
   <div class='container'>
     <div class='row'>
       <div class='col-xs-6' align="center">
-        <h2>Pozri si informácie o druhu ryby</h2>
+        <h2>Pozri si informácie o druhu ryby.</h2>
       </div>
       <div class='col-xs-6' align="center">
-        <h2>Hľadaj revír podľa kraja, organizácie alebo mena</h2>
+        <h2>Hľadaj revír podľa organizácie alebo názvu revíru.</h2>
       </div>
     </div>
     <div class='row'>
