--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,8 +4,7 @@
 [class*="container2"] {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: rgba(86, 61, 124, .15);
-  border: 1px solid rgba(86, 61, 124, .2);
+  width: 30%;
 }
 
 
