--- a/app/views/catches/show.html.erb
+++ b/app/views/catches/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @catch.user.name) %>
-
+<h1> Záznam o úlovku</h1>
 <div class="row">
     <section class="catcch_info">
       <div> <span>  <b><%= "Rybár:" %></b> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
