--- a/app/views/shared/_catch_form.html.erb
+++ b/app/views/shared/_catch_form.html.erb
@@ -1,4 +1,4 @@
-Pridaj svoj úlovok...
+<h3>Pridaj svoj úlovok...</h3>
 <%= form_for(@catch) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
