--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,16 +6,17 @@
         <li><%= link_to "Revíry", areas_path %></li>
         <li><%= link_to "Ryby", fishes_path %></li>
       </ul>
+
+
       <ul class="nav navbar-nav navbar-right">
 
         <% if logged_in? %>
-
+          <li><%= link_to "Pridaj úlovok", urcatches_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Účet <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profil", current_user %></li>
               <li><%= link_to "Nastavenia účtu", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
