--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,19 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Update your profile</h1>
+<h1>Uprav svoj profil</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
 
 
-      <h1>Delete your account!</h1>
+      <h1>Vymaž svoj účet!</h1>
 
       <h2>
-        Remember. When you delete your account, you also destroy all your data.
+        Pamätaj. Vymazanie účtu je nevratná akcia a spolu s tvojim účtou sa zmažú aj všetky tvoje úlovky.
       </h2>
     <center>
-      <%= link_to "Delete my account", @user, method: :delete,class: "btn btn-primary",
-                  data: { confirm: "Are you sure? This action cannot be reversed" } %>
+      <%= link_to "Vymaž môj účet!", @user, method: :delete,class: "btn btn-primary",
+                  data: { confirm: "Si si istý? Táto akcia je nevratná." } %>
     </center>
 
   </div>
