--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,10 @@
   <aside class="col-md-4">
     <section class="user_info">
       <p> <%= gravatar_for @user %> </p>
-      <span>  <%= "Name:" %> <%= @user.name %> </span>
-      <span><%= "Surname:" %> <%= @user.surname %></span>
-      <span> <%= "Age:" %> <%= @user.age %> </span>
-      <span> <%= "Email:" %> <%= @user.email %> </span>
+      <span>  <%= "Meno:" %> <%= @user.name %> </span>
+      <span><%= "Priezvisko:" %> <%= @user.surname %></span>
+      <span> <%= "Vek:" %> <%= @user.age %> </span>
+      <span> <%= "E-mail:" %> <%= @user.email %> </span>
     </section>
   </aside>
   <div class="col-md-8">
